[gd_scene load_steps=2 format=3 uid="uid://bx0yw7rkqh3ci"]

[ext_resource type="Script" uid="uid://byuxceq3lt2up" path="res://ui/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="VBoxContainer" parent="UI"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 100.0
grow_vertical = 0

[node name="LevelLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Level: Level01"

[node name="CheckpointLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Checkpoint: Start"

[node name="StatusPanel" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="ScoreLabel" type="Label" parent="UI/StatusPanel"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 2

[node name="DeathsLabel" type="Label" parent="UI/StatusPanel"]
layout_mode = 2
text = "Deaths: 0"
horizontal_alignment = 2

[node name="TimerLabel" type="Label" parent="UI/StatusPanel"]
layout_mode = 2
text = "Time: 60.0s"
horizontal_alignment = 2

[node name="CollectiblePanel" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="FruitContainer" type="HBoxContainer" parent="UI/CollectiblePanel"]
layout_mode = 2

[node name="FruitIcon" type="Sprite2D" parent="UI/CollectiblePanel/FruitContainer"]
modulate = Color(1, 0.5, 0, 1)
position = Vector2(16, 16)
scale = Vector2(16, 16)

[node name="FruitLabel" type="Label" parent="UI/CollectiblePanel/FruitContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="UI/CollectiblePanel"]
layout_mode = 2

[node name="GemContainer" type="HBoxContainer" parent="UI/CollectiblePanel"]
layout_mode = 2

[node name="GemIcon" type="Sprite2D" parent="UI/CollectiblePanel/GemContainer"]
modulate = Color(0, 1, 1, 1)
position = Vector2(16, 16)
scale = Vector2(16, 16)

[node name="GemLabel" type="Label" parent="UI/CollectiblePanel/GemContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0"
vertical_alignment = 1
